Visual updates to the static pages, improvements to the tutorial

--- a/web/src/views/community.html
+++ b/web/src/views/community.html
@@ -1,4 +1,4 @@
-
+<div class="container" style="padding-top:40px;">
 <div class="row">
 	<div class="span12">
 		<h3 style="float:left;">Popular Worlds</h3>
@@ -13,4 +13,4 @@
 		</div>
 	</div>
 </div>
-
+</div>
