--- a/web/src/views/home.html
+++ b/web/src/views/home.html
@@ -2,33 +2,30 @@
 <div class="hero">
   <h2>Create your own games!</h2>
   <div>
-  	<p>Codako was inspired by the KidSIM research of the 1990's,<br>
-  	and is targeted at young learners ages 6-12.</p>
+  	<p>Codako was inspired by the KidSIM research of the 1990's, and is targeted<br>
+  	at young learners ages 6-12 learning to program for the first time.</p>
   	<br>
     <a class="btn btn-large" ng-click="startTour()">
-      Take a Tour
+      Try it Now
     </a>
 	</div>
 </div>
 
-<div class="home-region green">
+<div class="home-region green" style="border-top:2px solid rgba(0,0,0,0.45);">
 	<div class="container">
 		<div class="row">
 			<div class="span4">
-			  <h3>Create Worlds</h3>
+			  <h3><i class="icon-globe"></i> Create Worlds</h3>
 			  <p>Use Codako's built-in drawing tools to create characters and place them into your game world. You can create mario-style adventure games, simulations, zelda-style exploration games, and more!</p>
-			  <p><a class="btn" href="#">View details &raquo;</a></p>
 			</div>
 			<div class="span4">
-			  <h3>Record Rules</h3>
+			  <h3><i class="icon-facetime-video"></i> Record Rules</h3>
 			  <p>Bring your world to life by turning on the recorder and demonstrating what you want to happen! Watch as bits of code are written automatically and make the changes you want.</p>
-			  <p><a class="btn" href="#">View details &raquo;</a></p>
 			</div>
 			<div class="span4">
-			  <h3>Learn Core Concepts</h3>
+			  <h3><i class="icon-foursquare"></i> Learn Core Concepts</h3>
 			  <p>Codako introduces many programming concepts, without young learners needing to write actual code. It lays a foundation of understanding that students can carry with them as they learn to program.
 			  </p>
-			  <p><a class="btn" href="#">View details &raquo;</a></p>
 			</div>
 		</div>
 	</div>
@@ -38,10 +35,13 @@
 <div class="container">
 <div class="row">
 	<div class="span7">
-	  <h3>Research Based Approach</h3>
-	  <p>Codako is heavily inspired by the KidSIM research conducted by Apple's Advanced Technologies Group in the late 1990s, which showed that students were very successful in programming-by-demonstration environments. As Codako is developed, several more studies will be conducted around it's effectiveness.</p>
-	  <p><a class="btn" href="#">View details &raquo;</a></p>
+	  <h3>Based on research</h3>
+	  <p>Codako is heavily inspired by the KidSIM research conducted by Apple's Advanced Technologies Group in the late 1990s, which identified the potential programming-by-demonstration environments had for engaging and teaching core concepts to young learners. Codako's web foundation introduces new oppotunities and new challenges, and we're looking for partners to help conduct another round of research.</p>
 	</div>
+	<div class="offset2 span3">
+		<i class="icon-beaker" style="font-size:150px;"></i>
+	</div>
+
 </div>
 </div>
 </div>
@@ -49,11 +49,13 @@
 <div class="home-region light-green">
 <div class="container">
 <div class="row">
-	<div class="offset5 span7">
-	  <h3>Advanced Features</h3>
-	  <p>Codako was designed to be simple, and students can learn more about advanced features as they need them. It supports variables, characters with multiple appearances, event-triggered rules, rule containers that teach control flow, and more!
+	<div class="offset1 span3">
+		<i class="icon-cogs" style="font-size:150px;"></i>
+	</div>
+	<div class="offset1 span7">
+	  <h3>Advanced concepts, no downloads</h3>
+	  <p>Codako was designed to be simple, and students can learn about advanced features as they need them. It supports variables, events, control flow blocks, and more! It was built from the ground up on HTML5 and Javascript run on anything with a modern browser. No downloads or plugins are required.
 	  </p>
-	  <p><a class="btn" href="#">View details &raquo;</a></p>
 	</div>
 </div>
 </div>
@@ -64,8 +66,10 @@
 <div class="row">
 	<div class="span7">
 	  <h3>Built with love</h3>
-	  <p>Codako will always be free to play, and will never collect information beyond the required email address, nickname and password. 20 years ago, I learned to program using Apple's KidSIM, and Codako is my effort to bring back the platform that inspired me in my childhood.</p>
-	  <p><a class="btn" href="#">View details &raquo;</a></p>
+	  <p>Codako will always be free to play, and will never collect information beyond the required email address, nickname and password. 20 years ago, I learned to program using Apple's KidSIM, and Codako is my effort to bring back the platform that inspired me in my childhood. For more about why I've built Codako, see the <a href="/#/parents">FAQ for Parents</a></p>
+	</div>
+	<div class="offset2 span3">
+		<i class="icon-heart" style="font-size:150px; padding-top:25px; padding-bottom:25px;"></i>
 	</div>
 </div>
 </div>
