--- a/web/src/views/parents.html
+++ b/web/src/views/parents.html
@@ -1,4 +1,4 @@
-
+<div class="container" style="padding-top:40px; padding-bottom:40px;">
 <div class="row">
   <div class="span6 offset3">
       <h3>For Parents</h3>
@@ -33,4 +33,5 @@
 	<h5>Q: I'd like to use Codako in my school!</h5>
 		<p>Great! I'd love for you to use Codako. Reach out to me at ben@foundry376.com so we can help get you started!
   </div>
+</div>
 </div>
