--- a/web/css/main.less
+++ b/web/css/main.less
@@ -6,6 +6,12 @@ html, body {
 	height:100%;
 }
 
+@media (max-width: 979px) {
+	.navbar-fixed-top, .navbar-fixed-bottom {
+	position: fixed;
+	}
+}
+
 .whitebox {
 	background-color:white;
 	border-radius:4px;
@@ -19,15 +25,23 @@ html, body {
 }
 
 .hero {
-	margin-top:100px;
-	margin-bottom:60px;
+	padding-top:100px;
+	padding-bottom:60px;
 	text-align:center;
+	background:url(/img/splash-2.png) center center;
+    background-size: cover;
 	display:block;
 	h2, p {
+		color:#f4f4f4;
 		display:inline-block;
-		padding-left:10px;
-		padding-right:10px;
-		background-color:rgba(0,0,0,0.2);
+		padding:9px;
+		padding-left:20px;
+		padding-right:20px;
+		margin:0.2px;
+		background-color:rgba(0,0,0,0.3);
+	}
+	p {
+		margin-bottom:15px;
 	}
 }
 
@@ -89,7 +103,9 @@ html, body {
 	div {
 		border-radius:5px;
 		border:3px dashed #ccc;
-		padding:100px;
+		padding:60px;
+		padding-top:100px;
+		height:68px;
 		text-align:center;
 		font-size:1.5em;
 		font-weight:bold;
