--- a/web/src/views/profile.html
+++ b/web/src/views/profile.html
@@ -2,19 +2,18 @@
 	<div class="row">
 		<div class="span12" style="margin-top:40px; margin-bottom:20px;">
 			<img src="" style="background-color: #eee; width:90px;height:90px;float:left; margin-right:15px;"/>
-			<h3 style="margin-bottom:0; color:black;">{{user().nickname}}</h3>
+			<h3 style="margin-bottom:0; color:black;">{{user.nickname}}</h3>
 			<div style="color:rgba(0,0,0,0.7);">User statistics go here.</div>
 		</div>
 	</div>
 
-	<div class="row">
+	<div class="row" ng-show="user_is_self">
 		<div class="span12">
 			<div style="float:right;"><a ng-click="importWorld()">Import World</a></div>
 			<h3 style="float:left;">My Worlds</h3>
 		</div>
 
 		<div class="world-collection">
-
 			<div ng-repeat="world in worlds" class="span4 world">
 				<a ng-href="#/world/{{world._id}}">
 					<img ng-src="{{world.thumbnail}}">
@@ -29,6 +28,22 @@
 				</h4>
 			</div>
 			<a class="span4 new-item" ng-click="newWorld()"><div>+ New World</div></a>
+		</div>
+	</div>
+
+	<div class="row" ng-show="!user_is_self">
+		<div class="span12">
+			<h3 style="float:left;">Published Worlds</h3>
+		</div>
+
+		<div class="world-collection">
+			<div ng-repeat="world in worlds" class="span4 world">
+				<a ng-href="/stage-viewer/#/{{world._id}}">
+					<img ng-src="{{world.thumbnail}}">
+				</a>
+				<h4 style="color:black; margin-bottom:3px;">{{world.title}}
+				</h4>
+			</div>
 		</div>
 	</div>
 </div>
