--- a/web/stage-editor/css/editor.less
+++ b/web/stage-editor/css/editor.less
@@ -1,5 +1,6 @@
-body {
+html,body {
   background:url(../img/background.png) top left;
+  min-height:100%;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -khtml-user-select: none;
