--- a/web/src/views/profile.html
+++ b/web/src/views/profile.html
@@ -3,7 +3,7 @@
 		<div class="span12" style="margin-top:40px; margin-bottom:20px;">
 			<img src="" style="background-color: #eee; width:90px;height:90px;float:left; margin-right:15px;"/>
 			<h3 style="margin-bottom:0; color:black;">{{user.nickname}}</h3>
-			<div style="color:rgba(0,0,0,0.7);">User statistics go here.</div>
+			<div style="color:rgba(0,0,0,0.7);">{{worlds.length}} worlds</div>
 		</div>
 	</div>
 
