Fixes for some problems with user account creation

--- a/web/src/views/sign-in.html
+++ b/web/src/views/sign-in.html
@@ -8,7 +8,7 @@
 
       <div class="control-group">
         <div class="controls">
-          <input ng-model="credentials.nickname" type="text" id="Nickname" placeholder="Nickname"/>
+          <input ng-model="credentials.email" type="text" id="Email" placeholder="Email"/>
         </div>
       </div>
 
