[editor] Sign-in to save button

--- a/web/css/main.less
+++ b/web/css/main.less
@@ -24,6 +24,28 @@ html, body {
 	border-top:4px solid #6db33f;
 }
 
+.navbar .signin-to-save {
+	float:right;
+	color:white;
+	display:inline-block;
+	margin-top:5px;
+	.msg {
+		background:#6db33f;
+		padding:4px;
+		padding-left:10px;
+		padding-right:10px;
+		display:inline-block;
+		float:left;
+	}
+	.arrow {
+		float:left;
+		display:inline-block;
+		border-top:14px solid transparent;
+		border-right:14px solid #6db33f;
+		border-bottom:14px solid transparent;
+	}
+}
+
 .hero {
 	padding-top:100px;
 	padding-bottom:60px;
