--- a/web/stage-editor/css/editor.less
+++ b/web/stage-editor/css/editor.less
@@ -25,11 +25,11 @@ body.tool-pointer .stage {
 body.tool-paint .stage,
 body.tool-paint #appearances .item,
 {
-  cursor: url(../img/cursor_paint.png), url(img/cursor_paint.png), default !important;
+  cursor: url(../img/cursor_paint.png), default !important;
 }
 
 body.tool-record .stage {
-  cursor: url(../img/cursor_camera.png), url(img/cursor_camera.png), default !important;
+  cursor: url(../img/cursor_camera.png), default !important;
 }
 
 body.tool-delete .stage,
@@ -39,7 +39,7 @@ body.tool-delete #appearances .item,
 body.tool-delete .rule,
 body.tool-delete .variable-box,
 body.tool-delete .group {
-  cursor: url(../img/cursor_trashcan.png), url(img/cursor_trashcan.png), default !important;
+  cursor: url(../img/cursor_trashcan.png), default !important;
 }
 
 .btn-tool, .btn-tool-first {
